--- a/contact.html
+++ b/contact.html
@@ -6,20 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
-    <a href="index.html" class="homepage-link">Back to homepage</a>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Anna Petrovska</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" disabled href="contact.html">Contact me</a>
+                </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <h1>Contact me</h1>
-    <h3>Front-end developer from Liv, Ukraine</h3>
-    <div class="about-paragraphs">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum. <br> <br>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum. <br> <br>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.</p>
+    <h3>Front-end developer from Lviv, Ukraine</h3>
+    <p class="bg-body mb-5" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.</p>
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md-4">
+                <img src="images/l3jP-yoga.png" class="img-fluid img-thumbnail" >
+            </div>
+                        <div class="col-md-4">
+                <img src="images/jxM9-weather.png" class="img-fluid img-thumbnail">
+            </div>
+                        <div class="col-md-4">
+                <img src="images/WgM8-yogurt.png" class="img-fluid img-thumbnail">
+            </div>
+        </div>
     </div>
     <div id="contact">
         <h2>📮 Contact me</h2>
-        <a class="mail-link" href="mailto:anet.ditina@gmail.com">anet.ditina@gmail.com</a>
+        <a class="about-link" href="mailto:anet.ditina@gmail.com">anet.ditina@gmail.com</a>
     </div>
 </body>
 </html>
