--- a/index.html
+++ b/index.html
@@ -1,80 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="src/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-light ">
-        <div class="container-md">
-            <a class="navbar-brand" href="index.html">Anna Petrovska</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" disabled href="contact.html">Contact me</a>
-                </li>
-                </ul>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="about me and my progects">
+    <title>Anna Petrovska</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-md">
+        <a class="navbar-brand" href="index.html">Anna Petrovska</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" disabled href="contact.html">Contact me</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
     <h2>👋 Hi! I am</h2>
     <h1>Anna Petrovska</h1>
     <h3>Front-end developer, based in Europe</h3>
     <div class="navigator-links mb-5">
-        <a class="navigator-links__contact" href="contact.html">Contact Me</a>
-        <a class="navigator-links__about" href="about.html">About Me</a>
+      <a class="navigator-links__contact" href="contact.html">Contact Me</a>
+      <a class="navigator-links__about" href="about.html">About Me</a>
     </div>
     <div class="container">
-        <div class="row mb-5">
-            <div class="col-md-6">
-                <img src="images/l3jP-yoga.png" class="img-fluid shadow-sm p-2 border">
-            </div>
-            <div class="col-md-6">
-                <h2 class="text-start">Yoga app</h2>
-                <p class="text-start p-0 bg-body" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-                <div class="navigator-links d-flex justify-content-start" class="">
-                    <a  class="navigator-links__contact" href="about.html">Launch Yoga App</a>
-                </div>
-            </div>
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <img
+            src="images/l3jP-yoga.png"
+            class="img-fluid shadow-sm p-2 border"
+          />
         </div>
-        <div class="row mb-5">
-            <div class="col-md-6">
-                <h2 class="text-start">Weather app</h2>
-                <p class="text-start p-0 bg-body" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-                <div class="navigator-links d-flex justify-content-start" class="">
-                    <a  class="navigator-links__contact" href="about.html">Launch Weather App</a>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <img src="images/jxM9-weather.png" class="img-fluid shadow-sm p-2 border">
-            </div>
+        <div class="col-md-6">
+          <h2 class="text-start">Yoga app</h2>
+          <p class="text-start p-0 bg-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="navigator-links d-flex justify-content-start" class="">
+            <a class="navigator-links__contact" href="about.html"
+              >Launch Yoga App</a
+            >
+          </div>
         </div>
-        <div class="row mb-5">
-            <div class="col-md-6">
-                <img src="images/WgM8-yogurt.png" class="img-fluid shadow-sm p-2 border">
-            </div>
-            <div class="col-md-6">
-                <h2 class="text-start">Yogurt app</h2>
-                <p class="text-start p-0 bg-body" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-                <div class="navigator-links d-flex justify-content-start" class="">
-                    <a  class="navigator-links__contact" href="about.html">Launch Yogurt App</a>
-                </div>
-            </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <h2 class="text-start">Weather app</h2>
+          <p class="text-start p-0 bg-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="navigator-links d-flex justify-content-start" class="">
+            <a class="navigator-links__contact" href="about.html"
+              >Launch Weather App</a
+            >
+          </div>
         </div>
+        <div class="col-md-6">
+          <img
+            src="images/jxM9-weather.png"
+            class="img-fluid shadow-sm p-2 border"
+          />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <img
+            src="images/WgM8-yogurt.png"
+            class="img-fluid shadow-sm p-2 border"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2 class="text-start">Yogurt app</h2>
+          <p class="text-start p-0 bg-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="navigator-links d-flex justify-content-start" class="">
+            <a class="navigator-links__contact" href="about.html"
+              >Launch Yogurt App</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
